--- a/app/src/main/res/layout/square_button.xml
+++ b/app/src/main/res/layout/square_button.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:id="@+id/FLitem"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <com.example.konstantin.a151515.SquareButton
-        android:id="@+id/button"
+        android:id="@+id/squareButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="wrap_content" />
 </FrameLayout>
