add logic, functions spin, generate, onclick interface etc,

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:background="@android:color/black"
+    android:orientation="vertical">
 
+
+    <TextView
+        android:id="@+id/nameUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Konstantin"
+        android:textAlignment="center"
+        android:textColor="@color/colorDerevo"
+        android:textSize="30sp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/step"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Step"
+        android:textAlignment="textEnd"
+        android:textColor="@color/colorDerevo"
+        android:textSize="30sp"
+        android:textStyle="bold|italic" />
 
     <com.example.konstantin.a151515.SquareLayout
         android:id="@+id/game_board_container"
@@ -19,12 +41,17 @@
             android:id="@+id/game_board"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/black"
             android:elevation="0dp"
-            android:padding="10dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:paddingTop="3dp"
             android:visibility="visible"
             app:spanCount="4">
 
         </android.support.v7.widget.RecyclerView>
+
     </com.example.konstantin.a151515.SquareLayout>
+
 </LinearLayout>
