--- a/app/src/main/res/layout/square_button.xml
+++ b/app/src/main/res/layout/square_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/FLitem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -7,5 +8,14 @@
     <com.example.konstantin.a151515.SquareButton
         android:id="@+id/squareButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+
+        android:layout_margin="3dp"
+        android:background="@drawable/derevo2"
+        android:fontFamily="monospace"
+        android:text="Button"
+        android:textColor="@android:color/black"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 </FrameLayout>
