--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
-    <color name="colorDerevo">#8F5019</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#575756</color>
+    <color name="colorDerevo">#ffcc00</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="gren">#0d1e14</color>
+    <color name="bgButton">#b8a797</color>
+    <color name="txtColor">#a86121</color>
 </resources>
