--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#575756</color>
-    <color name="colorDerevo">#ffcc00</color>
+    <color name="colorDerevo">#8f5019</color>
 
     <color name="black_overlay">#66000000</color>
     <color name="gren">#0d1e14</color>
