--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/ll"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@android:color/background_light"
-android:elevation="0dp"
-android:gravity="center_vertical"
-android:orientation="vertical"
-android:weightSum="1">
-
-<TextView
-    android:id="@+id/textView"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llMain"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/bgButton"
-    android:text="Fifteen"
-    android:textAlignment="center"
-    android:textSize="35sp"
-    android:textStyle="bold|italic" />
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light"
+    android:elevation="0dp"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:weightSum="1">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/bgButton"
+        android:text="Fifteen"
+        android:textAlignment="center"
+        android:textSize="35sp"
+        android:textStyle="bold|italic" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="332dp"
-        app:srcCompat="@drawable/ic" />
+        app:srcCompat="@drawable/vvv" />
 
     <Button
         android:id="@+id/startGame"
