--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="gren">#0d1e14</color>
     <color name="bgButton">#b8a797</color>
     <color name="txtColor">#a86121</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+
 </resources>
