--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:id="@+id/llSetting"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/white"
     android:elevation="0dp"
     android:gravity="center_vertical|center"
     android:orientation="vertical"
@@ -40,7 +40,8 @@
         android:textOff="BL"
         android:textOn="WH"
         android:textSize="20sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:track="@drawable/swithumb" />
 
     <TextView
         android:id="@+id/textView2"
@@ -55,6 +56,7 @@
 
     <Switch
         android:id="@+id/soundEffSwitch"
+
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_margin="10dp"
@@ -66,7 +68,9 @@
         android:textAlignment="textStart"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:track="@drawable/swithumb"
+        android:visibility="visible" />
 
     <Switch
         android:id="@+id/musicSwitch"
@@ -80,7 +84,8 @@
         android:text="Music"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:track="@drawable/swithumb" />
 
     <TextView
         android:id="@+id/textView3"
@@ -107,7 +112,8 @@
         android:textAlignment="textStart"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:track="@drawable/swithumb" />
 
     <Switch
         android:id="@+id/stepSwitch"
@@ -122,7 +128,8 @@
         android:text="Steps"
         android:textColor="@android:color/background_dark"
         android:textSize="20sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:track="@drawable/swithumb" />
 
     <Button
         android:id="@+id/apply"
