--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="txtColor">#a86121</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="red">#FC0707</color>
 
 </resources>
